# python-project-52

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: lint_check.yml  test_cov.yml  test_coverage.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  tasks.json  test_task.json  test_users.json  user.json
task_manager/label/: models.py  tests.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/status/: tests.py  urls.py  views.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_name.py  0003_alter_status_options_alter_status_name.py
task_manager/task/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0003_alter_task_options_alter_task_author_and_more.py  0003_remove_task_labels_tasklabel.py  0004_alter_task_created_at_tasklabel_alter_task_labels.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: alerts.html  base.html  delete.html  delete_parent.html  footer.html  form.html  home.html  index.html  layout.html  navbar.html
task_manager/user/: forms.py  tests.py  views.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+39 files in other folders)
